@@ -2,7 +2,7 @@ from __future__ import absolute_import, unicode_literals
 
 from django.http import HttpResponseForbidden
 from django.shortcuts import get_object_or_404, redirect
-from django.utils.translation import ugettext_lazy as __
+from django.utils.translation import ugettext_lazy
 
 from wagtail.wagtailadmin import messages
 from wagtail.wagtailadmin.forms import CollectionForm
@@ -18,8 +18,8 @@ class Index(IndexView):
     context_object_name = 'collections'
     template_name = 'wagtailadmin/collections/index.html'
     add_url_name = 'wagtailadmin_collections:add'
-    page_title = __("Collections")
-    add_item_label = __("Add a collection")
+    page_title = ugettext_lazy("Collections")
+    add_item_label = ugettext_lazy("Add a collection")
     header_icon = 'folder-open-1'
 
     def get_queryset(self):
@@ -30,8 +30,8 @@ class Index(IndexView):
 class Create(CreateView):
     permission_policy = collection_permission_policy
     form_class = CollectionForm
-    page_title = __("Add collection")
-    success_message = __("Collection '{0}' created.")
+    page_title = ugettext_lazy("Add collection")
+    success_message = ugettext_lazy("Collection '{0}' created.")
     add_url_name = 'wagtailadmin_collections:add'
     edit_url_name = 'wagtailadmin_collections:edit'
     index_url_name = 'wagtailadmin_collections:index'
@@ -49,9 +49,9 @@ class Edit(EditView):
     permission_policy = collection_permission_policy
     model = Collection
     form_class = CollectionForm
-    success_message = __("Collection '{0}' updated.")
-    error_message = __("The collection could not be saved due to errors.")
-    delete_item_label = __("Delete collection")
+    success_message = ugettext_lazy("Collection '{0}' updated.")
+    error_message = ugettext_lazy("The collection could not be saved due to errors.")
+    delete_item_label = ugettext_lazy("Delete collection")
     edit_url_name = 'wagtailadmin_collections:edit'
     index_url_name = 'wagtailadmin_collections:index'
     delete_url_name = 'wagtailadmin_collections:delete'
@@ -66,11 +66,11 @@ class Edit(EditView):
 class Delete(DeleteView):
     permission_policy = collection_permission_policy
     model = Collection
-    success_message = __("Collection '{0}' deleted.")
+    success_message = ugettext_lazy("Collection '{0}' deleted.")
     index_url_name = 'wagtailadmin_collections:index'
     delete_url_name = 'wagtailadmin_collections:delete'
-    page_title = __("Delete collection")
-    confirmation_message = __("Are you sure you want to delete this collection?")
+    page_title = ugettext_lazy("Delete collection")
+    confirmation_message = ugettext_lazy("Are you sure you want to delete this collection?")
     header_icon = 'folder-open-1'
 
     def get_queryset(self):
